--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
   <properties>
     <java.version>11</java.version>
     <spring-cloud.version>2020.0.3</spring-cloud.version>
+    <springdoc-openapi-security.version>1.3.4</springdoc-openapi-security.version>
   </properties>
   <dependencies>
 
@@ -36,6 +37,23 @@
       <artifactId>spring-boot-starter</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>org.springdoc</groupId>
+      <artifactId>springdoc-openapi-ui</artifactId>
+      <version>${springdoc-openapi-security.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springdoc</groupId>
+      <artifactId>springdoc-openapi-data-rest</artifactId>
+      <version>${springdoc-openapi-security.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springdoc</groupId>
+      <artifactId>springdoc-openapi-security</artifactId>
+      <version>${springdoc-openapi-security.version}</version>
+    </dependency>
 
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -78,11 +96,7 @@
       <scope>test</scope>
     </dependency>
 
-    <dependency>
-      <groupId>javax.validation</groupId>
-      <artifactId>validation-api</artifactId>
-      <version> 2.0.1.Final</version>
-    </dependency>
+
 
     <dependency>
       <groupId>org.springframework</groupId>
